# 6502_emulator

./: .clang-format  .gitignore  main.cpp  meson.build  todo.md
src/: cpu.cpp  cpu.hpp  main.cpp  memory.hpp  meson.build  opcodes.hpp
tests/: algorithms.cpp  arithmetic.cpp  bitwise.cpp  branches.cpp  constexpr_tests.cpp  flags_changes.cpp  jumps_calls.cpp  load_in_register.cpp  load_in_register.hpp  loads.cpp  loads_stores.cpp  logical.cpp  meson.build  others.cpp  shifts.cpp  stack.cpp  system.cpp  transfers.cpp  util.cpp  util.hpp
tests/algorithms/: fibonacci_7.asm
